src/test/ui/generic-associated-types/gat-in-trait-path-undeclared-lifetime.stderr
error[E0261]: use of undeclared lifetime name `'x`
  --> $DIR/gat-in-trait-path-undeclared-lifetime.rs:8:35
   |
LL |   fn _f(arg : Box<dyn for<'a> X<Y<'x> = &'a [u32]>>) {}
   |        -                          ^^ undeclared lifetime
   |        |
   |        help: consider introducing lifetime `'x` here: `<'x>`

error[E0582]: binding for associated type `Y` references lifetime `'a`, which does not appear in the trait input types
  --> $DIR/gat-in-trait-path-undeclared-lifetime.rs:8:33
   |
LL |   fn _f(arg : Box<dyn for<'a> X<Y<'x> = &'a [u32]>>) {}
   |                                 ^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0261, E0582.
For more information about an error, try `rustc --explain E0261`.
